# monero_web_payments

./: .gitignore  Cargo.toml  README.md  index.html
src/: config.rs  main.rs  server.rs  types.rs  wallet_rpc.rs
