[package]
name = "moneromerchd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
uuid = { version = "1.8", features = ["v4"] }
rust_decimal = "1.35"
rust_decimal_macros = "1.35"
tower-http = { version = "0.6.8", features = ["cors"] }
